--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,3 +8,24 @@
 router-outlet {
   width: 50%;
 }
+
+
+.navbar {
+  display: flex;
+  justify-content: flex-start;
+  background-color: #f8f9fa;
+  padding: 10px;
+  border-bottom: 1px solid #ddd;
+
+  a {
+    margin-right: 20px;
+    text-decoration: none;
+    color: #007bff;
+    font-weight: bold;
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+}
+
