--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,14 @@
-<div class="main-container">
 
-  <nav>
+  <nav class="navbar">
     <a routerLink="/login">Login</a>
     <a routerLink="/sign-in">Sign In</a>
     <a routerLink="/dashboard">Home</a>
   </nav>
-<app-logout></app-logout>
-<router-outlet></router-outlet>
-</div>
+  <div class="content">
+    <router-outlet></router-outlet>
+    <app-logout></app-logout>
+  </div>
+
+
+
+
