--- a/src/app/object-list/object-list.component.html
+++ b/src/app/object-list/object-list.component.html
@@ -9,6 +9,30 @@
         <p>{{ item.description }}</p>
     </div>
 </div>
+
 <ng-template #noItems>
     <p>No items available.</p>
 </ng-template>
+
+<!-- Edit Modal -->
+<div *ngIf="isEditing" class="edit-modal">
+    <div class="modal-content">
+        <h3>Edit Item</h3>
+        <form (ngSubmit)="saveChanges()">
+            <label for="href">Link (href):</label>
+            <input type="text" id="href" [(ngModel)]="editedItem.href" name="href" required>
+
+            <label for="name">Name:</label>
+            <input type="text" id="name" [(ngModel)]="editedItem.name" name="name" required>
+
+            <label for="price">Price:</label>
+            <input type="number" id="price" [(ngModel)]="editedItem.price" name="price" required>
+
+            <label for="description">Description:</label>
+            <textarea id="description" [(ngModel)]="editedItem.description" name="description" required></textarea>
+
+            <button type="submit">Save Changes</button>
+            <button type="button" (click)="cancelEdit()">Cancel</button>
+        </form>
+    </div>
+</div>
