--- a/src/app/my-presents/my-presents.component.html
+++ b/src/app/my-presents/my-presents.component.html
@@ -1,4 +1,5 @@
 <app-object-list [items]="objectList"
+                 [items_i]="objectList"
                  (itemDeleted)="onItemDeleted($event)"
                  (itemEdited)="onItemEdited($event)"
 ></app-object-list>
