--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
 <nav class="navbar">
-  <a routerLink="/login">Login</a>
-  <a routerLink="/sign-in">Sign In</a>
-  <a routerLink="/dashboard">Home</a>
-  <a routerLink="/my-presents">My wishlist</a>
+  <a routerLink="/login">Logga in</a>
+  <a routerLink="/sign-in">Registrera dig</a>
+  <a routerLink="/dashboard">Hem</a>
+  <a routerLink="/my-presents">Min önskelista</a>
+  <a routerLink="/all-presents">Alla andras önskelista</a>
+  <a routerLink="/bought-presents">Alla presenter jag köpt</a>
 </nav>
 <!--
 <div>
