--- a/src/app/object-list/object-list.component.html
+++ b/src/app/object-list/object-list.component.html
@@ -4,6 +4,8 @@
     </button>
 </div>
 
+
+
 <div *ngIf="isAddFormVisible" class="add-item-form">
     <h3>Add New Item</h3>
     <form (ngSubmit)="addItem()">
@@ -23,46 +25,20 @@
     </form>
 </div>
 
-<div *ngIf="isAddFormVisible" class="add-item-form">
-    <h3>Add New Item</h3>
-    <form (ngSubmit)="addItemI()">
-        <label for="new-href">Link (href):</label>
-        <input type="text" id="new-href-i" [(ngModel)]="newItemI.href" name="newHref" required>
-
-        <label for="new-name">Name:</label>
-        <input type="text" id="new-name-i" [(ngModel)]="newItemI.name" name="newName" required>
-
-        <label for="new-price">Price:</label>
-        <input type="number" id="new-price-i" [(ngModel)]="newItemI.price" name="newPrice" required>
-
-        <label for="new-description">Description:</label>
-        <textarea id="new-description-i" [(ngModel)]="newItemI.description" name="newDescription" required></textarea>
-
-        <button type="submit">Add Item</button>
-    </form>
-</div>
-
-<div *ngIf="items && items.length; else noItems" class="grid-container">
-    <div class="grid-item" *ngFor="let item of items; let i = index">
-        <div class="item-actions">
-            <button class="action-btn delete-btn" (click)="deleteItem(i)">×</button>
-            <button class="action-btn edit-btn" (click)="editItem(i)">✎</button>
+<div class="card-container">
+    <div
+            *ngFor="let item of items; let i = index"
+            class="card"
+            [ngStyle]="{ 'background-color': item.bought ? 'lightgrey' : 'white' }"
+    >
+        <h3>{{ item.name }}{{item.bought ? ' - [Varan är köpt]' : '' }}</h3>
+        <p><strong>Price:</strong> {{ item.price | currency }}</p>
+        <p><strong>Description:</strong> {{ item.description }}</p>
+        <p><strong>Link:</strong> <a [href]="item.href" target="_blank">{{ item.href }}</a></p>
+        <div>
+            <button (click)="editItem(i)">Edit</button>
+            <button (click)="deleteItem(i)">Delete</button>
         </div>
-        <a [href]="item.href">{{ item.name }}</a>
-        <p>Price: {{ item.price | currency }}</p>
-        <p>{{ item.description }}</p>
-    </div>
-</div>
-
-<div *ngIf="items && items.length; else noItems" class="grid-container">
-    <div class="grid-item" *ngFor="let item of items_i; let i = index">
-        <div class="item-actions">
-            <button class="action-btn delete-btn" (click)="deleteItemI(i)">×</button>
-            <button class="action-btn edit-btn" (click)="editItemI(i)">✎</button>
-        </div>
-        <a [href]="item.href">{{ item.name }}</a>
-        <p>Price: {{ item.price | currency }}</p>
-        <p>{{ item.description }}</p>
     </div>
 </div>
 
@@ -71,7 +47,7 @@
 </ng-template>
 
 <!-- Edit Modal -->
-<div *ngIf="isEditing" class="edit-modal">
+<div *ngIf="isEditing && editedItem" class="edit-modal">
     <div class="modal-content">
         <h3>Edit Item</h3>
         <form (ngSubmit)="saveChanges()">
