--- a/src/app/my-presents/my-presents.component.html
+++ b/src/app/my-presents/my-presents.component.html
@@ -27,15 +27,16 @@
     <div
             *ngFor="let item of objectList; let i = index"
             class="card"
-            [ngStyle]="{ 'background-color': item.bought ? 'lightgrey' : 'white' }"
     >
-        <h3>{{ item.name }}{{item.bought ? ' - [Varan är köpt]' : '' }}</h3>
-        <p><strong>Price:</strong> {{ item.price | currency }}</p>
-        <p><strong>Description:</strong> {{ item.description }}</p>
-        <p><strong>Link:</strong> <a [href]="item.href" target="_blank">{{ item.href }}</a></p>
+        <h3>{{ item.name }}</h3>
+        <p><strong>Pris:</strong> {{ item.price | currency }}</p>
+        <p><strong>Beskrivning:</strong> {{ item.description }}</p>
+        <p><strong>Länk:</strong> <a [href]="item.href" target="_blank">{{ item.href }}</a></p>
+        <div class="button-group">
         <div>
-            <button (click)="editItem(i)">Edit</button>
-            <button (click)="deleteItem(i)">Delete</button>
+            <button class="edit-button" (click)="editItem(i)">Editera</button>
+            <button class="delete-button" (click)="deleteItem(i)">Ta bort</button>
+        </div>
         </div>
     </div>
 </div>
@@ -59,8 +60,8 @@
             <label for="description">Description:</label>
             <textarea id="description" [(ngModel)]="editedItem.description" name="description" required></textarea>
 
-            <button type="submit">Save Changes</button>
-            <button type="button" (click)="cancelEdit()">Cancel</button>
+            <button type="submit">Spara</button>
+            <button class="edit-button" type="button" (click)="cancelEdit()">Avbryt</button>
         </form>
     </div>
 </div>
