--- a/src/app/all-presents/all-presents.component.html
+++ b/src/app/all-presents/all-presents.component.html
@@ -9,7 +9,7 @@
         <p><strong>Länk:</strong> <a [href]="item.href" target="_blank">{{ item.href }}</a></p>
         <div class="button-group">
             <div>
-                <button (click)="toggleBought(i)">Toggle Bought</button>
+                <button (click)="toggleBought(i)">Köp</button>
             </div>
         </div>
     </div>
