--- a/src/app/my-presents/my-presents.component.html
+++ b/src/app/my-presents/my-presents.component.html
@@ -25,7 +25,7 @@
 
 <div class="card-container">
     <div
-            *ngFor="let item of objectList; let i = index"
+            *ngFor="let item of filteredList(); let i = index"
             class="card"
     >
         <h3>{{ item.name }}</h3>
