--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,6 +44,8 @@
 </div>
 -->
 <div class="content">
-  <router-outlet></router-outlet>
+  <div class="main-content">
+    <router-outlet></router-outlet>
+  </div>
   <app-logout></app-logout>
 </div>
