--- a/src/app/all-presents/all-presents.component.html
+++ b/src/app/all-presents/all-presents.component.html
@@ -8,7 +8,11 @@
         <h3>{{ item.name }}</h3>
         <p><strong>Pris:</strong> {{ item.price | currency }}</p>
         <p><strong>Beskrivning:</strong> {{ item.description }}</p>
+        <p><strong>Den som önskar:</strong> {{ item.wisher }}</p>
         <p><strong>Länk:</strong> <a [href]="item.href" target="_blank">{{ item.href }}</a></p>
+        <div *ngIf="item.bought" class="warning">
+            <p><strong>Köpare:</strong> {{ item.buyer }}</p>
+        </div>
         <div class="button-group">
             <div *ngIf="item.bought && item.buyer === username" class="warning">
                 <button (click)="regretBuy(i)">Ångra köp</button>
