--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,7 @@
 <nav class="navbar">
-  <a routerLink="/login">Logga in</a>
-  <a routerLink="/sign-in">Registrera dig</a>
-  <a routerLink="/dashboard">Hem</a>
-  <a routerLink="/my-presents">Min önskelista</a>
-  <a routerLink="/all-presents">Alla andras önskelista</a>
-  <a routerLink="/bought-presents">Alla presenter jag köpt</a>
+  <a routerLink="/my-presents">Jag önskar</a>
+  <a routerLink="/all-presents">Andra önskar</a>
+  <a routerLink="/bought-presents">Jag har köpt</a>
 </nav>
 <!--
 <div>
