--- a/src/app/bought-presents/bought-presents.component.scss
+++ b/src/app/bought-presents/bought-presents.component.scss
@@ -1,3 +1,5 @@
+@use "../app.component.scss";
+
 .grid-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
@@ -180,20 +182,6 @@ p {
   background-color: #218838;
 }
 
-.card-container {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 16px;
-}
-
-.card {
-  border: 1px solid #ccc;
-  border-radius: 8px;
-  padding: 16px;
-  width: 300px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  transition: background-color 0.3s;
-}
 
 .card:hover {
   background-color: #f9f9f9;
