--- a/src/app/logout/logout.component.scss
+++ b/src/app/logout/logout.component.scss
@@ -1,3 +1,15 @@
 app-logout {
   margin-top: 20px; /* Add space between the content and the logout button */
 }
+
+
+button {
+  color: white;
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.2s;
+   background-color: #007bff;
+   margin-left: 8px;
+}
