--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -40,6 +40,21 @@ router-outlet {
 
 
 
+a {
+  font-weight: bold;
+  color: #007bff;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+p {
+  margin: 0.5rem 0;
+}
+
+
 .card-container {
   display: flex;
   flex-wrap: wrap;
