--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,11 @@
 <div class="login-container">
   <h2>Login</h2>
+
+  <div *ngIf="errorMessage" class="error-message">
+    {{ errorMessage }}
+  </div>
+
+
   <form (ngSubmit)="login()">
 
     <div class="form-group">
