--- a/src/app/my-presents/my-presents.component.html
+++ b/src/app/my-presents/my-presents.component.html
@@ -33,8 +33,11 @@
         <div class="card-details" *ngIf="expandedCardId === item.id">
         <p><strong>Pris:</strong> {{ item.price | number:'1.0-0' }} kronor</p>
         <p><strong>Beskrivning:</strong> {{ item.description }}</p>
-        <p><strong>Länk: </strong> <a [href]="item.href" target="_blank">{{ item.href  | slice:0:15 }}...</a></p>
-        </div>
+            <div *ngIf="item.href !== ''">
+
+                <p><strong>Länk:</strong> <a [href]="item.href" target="_blank">{{ item.href  | slice:0:15 }}...</a></p>
+            </div>
+         </div>
         <div class="button-group">
         <div>
             <button class="edit-button" (click)="editItem(i)">Editera</button>
